--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,4 @@
 <script>
-  document.write("Hello World");
+  document.write("Hello, I am Maria Ysabella B. Rosario. I am turning 15 on August 4, 2010! You can call me Ysa! My favourite artists are ZB1, Enhypen, and IVOS! My hobbies are playing volleyball and the guitar. I hope that we would have a fruitful year. Nice to meet you!");
   
 </script>
