--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <section class="w3-container">
-   <h1>Links to Rosario's work</h1>
+   <h1 style="font-family:Courier New; font-weight: bold; background-color:beige;";><center>Ysa's Portfolio</center></h1>
    <nav>
     <ul>
-      <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
+      <li><a href="./public/Q1_1stGraded.html">My Introduction</a> </li>
     </ul>
    </nav>
   </section>
