--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rosario Portfolio</title>
+  <title>Ysa's Portfolio</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 </head>
 <body>
   <section class="w3-container">
-   <h1 style="font-family:Courier New; font-weight: bold; background-color:beige;";><center>Ysa's Portfolio</center></h1>
+   <h1 style="font-family:Garamond,serif;background-color:beige;";><center>Chronicles of Ysa: Rubidium Edition</center></h1>
    <nav>
     <ul>
-      <li><a href="./public/Q1_1stGraded.html">My Introduction</a> </li>
+      <li><a href="./public/Q1_1stGraded.html">Prelude: Ysa .</a> </li>
     </ul>
    </nav>
   </section>
