--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html">Prelude: Ysa .</a> </li>
+      <li><a href="./public/Q12GRubidiumRosario.html"> Second Graded Exercise </a></li> 
+      <li><a href="./NGI.html"> 1st Non-Graded Exercise: Volleyball Counter</a></li> 
     </ul>
    </nav>
   </section>
