--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <li><a href="./public/Q1_1stGraded.html">Prelude: Ysa .</a> </li>
       <li><a href="./public/Q12GRubidiumRosario.html"> Second Graded Exercise </a></li> 
       <li><a href="./NGI.html"> 1st Non-Graded Exercise: Volleyball Counter</a></li> 
-       <li><a href="./public/Q13GRubidiumRosario.html"> Third Graded Exercise </a></li> 
+       <li><a href="./public/Q13GRubidiumRosario.html"> Third Graded Exercise </a></li>
+       <li><a href="./XcreditSONARubidiumRosario.md"> SONA </a></li> 
     </ul>
    </nav>
   </section>
