--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <li><a href="./NGI.html"> 1st Non-Graded Exercise: Volleyball Counter</a></li> 
        <li><a href="./public/Q13GRubidiumRosario.html"> Third Graded Exercise </a></li>
        <li><a href="./XcreditSONARubidiumRosario.md"> SONA </a></li> 
-      <li><a href ="public/NGI_Q1_BONUS/PART1.html"> Bonus </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART1.html"> Bonus 1 </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART1.html"> Bonus 1 </a></li>
     </ul>
    </nav>
   </section>
