--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
        <li><a href="./public/Q13GRubidiumRosario.html"> Third Graded Exercise </a></li>
        <li><a href="./XcreditSONARubidiumRosario.md"> SONA </a></li> 
       <li><a href ="public/NGI_Q1_BONUS/PART1.html"> Bonus 1 </a></li>
-      <li><a href ="public/NGI_Q1_BONUS/PART1.html"> Bonus 1 </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART2/PART2.html"> Bonus 2 </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART3/PART3.html"> Bonus 3 </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART4/PART4.html"> Bonus 4 </a></li>
+      <li><a href ="public/NGI_Q1_BONUS/PART5/PART5.html"> Bonus 5 </a></li>
+      <li><a href ="public/Q1_6th.html"> Bonus 6 </a></li>
     </ul>
    </nav>
   </section>
