--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li><a href ="public/NGI_Q1_BONUS/PART4/PART4.html"> Bonus 4 </a></li>
       <li><a href ="public/NGI_Q1_BONUS/PART5/PART5.html"> Bonus 5 </a></li>
       <li><a href ="public/Q1_6th.html"> Bonus 6 </a></li>
-    </ul>
+      <li><a href ="reflections.md"> Q1 Reflections </a></li>
+   
    </nav>
   </section>
 </body>
