--- a/public/q2/q2_graded_1.html
+++ b/public/q2/q2_graded_1.html
@@ -89,6 +89,22 @@
     a:hover{
       background-color: #9a5050;
     }
+    footer{
+      background-color: #f2caca;
+      text-align: center;
+      padding: 20px;
+      border-top: 2px solid #d49a9a;
+      margin-top: 40px;}
+
+    footer h3{
+      color: #5a2a2a;
+      margin-bottom: 10px;
+    }
+
+    footer p{
+      color: #5a2a2a;
+      font-size: 14px;
+    }
 
   </style>
 </head>
@@ -177,3 +193,13 @@
     </iframe>
   </div>
 </div>
+
+<footer>
+    <h3> Other Rubidium Schedules</h3>
+    <a href="https://Moshiku.github.io/CS3_1stQtrPortfolio/public/Name.HTML" target="_blank">Tuesday Schedule</a>
+    <a href="https://imri720.github.io/CS3_2ndQtrPortfolio_RbCrisostomo/public/Q2_RbSchedule.html" target="_blank">Thursday Schedule</a>
+    <a href="https://maongjeans.github.io/CS3_1stQtrPortfolio_RubidiumLozano/public/Rubidium'29%20Friday%20Sched.html" target="_blank">Friday Schedule</a>
+    <p>Made by Ysa Rosario | 9 - Rubidium</p>
+  </footer>
+</body>
+</html>
