--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <li><a href ="public/NGI_Q1_BONUS/PART5/PART5.html"> Bonus 5 </a></li>
       <li><a href ="public/Q1_6th.html"> Bonus 6 </a></li>
       <li><a href ="reflections.md"> Q1 Reflections </a></li>
+      <li><a href ="public/q2/q2_bonus1.html"> Q2 bonus</a></li>
+      <li><a href ="public/q2/q2_graded_1.html"> Q2_RbSchedule </a></li>
+      
    
    </nav>
   </section>
