--- a/public/q2/q2_graded_1.html
+++ b/public/q2/q2_graded_1.html
@@ -113,7 +113,7 @@
     <p><strong>Name:</strong> Ysa Rosario | <strong>Section:</strong> 9 - Rubidium | <strong>Date:</strong> 10/07/2025</p>
   </div>
   <h1>Rubidium's Monday Schedule</h1>
-  <h4><center>Monday schedule, one of the best days in our acad week!! It's also the one that starts the week. It makes me happy,specifically, the double period of chem!!</center></h4>
+  <h4><center>Monday schedule, one of the best days in our acad week!! It's also the one that starts the week.</center></h4>
   <table>
     <tr>
       <th>Time</th>
@@ -176,6 +176,17 @@
       <td>Chemistry</td>
     </tr>
   </table>
+
+  <div class="content">
+    <h2><center>About My Monday Experience</center></h2>
+    <p><center>Monday is really fun since it goes by REAALLLY fast! It also has an SP really early in the morning so it helps a lot! Usually, not too much quizzes are given here and overall, it's fun!</center></p>
+
+    <p><center>What I really like about Monday is that it has double period chem, my faaavv subject. Also, I have a lot of money during Monday since it IS the start of the week, so I can eat and eat!</center></p>
+
+    <p><center>And most of all, my energy is at its peak when it's Monday! I am filled up to the brim with energy and it really adds up to the fun!!
+      
+    </center></p>
+  </div>
 
   <h1>Kim Jiwoong!!</h1>
   <div class="grid">
