--- a/public/q2/homepage.html
+++ b/public/q2/homepage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Ysa Rosario">
   <title>Rubidium's Weekly Schedules</title>
-  <link rel="icon" href="../assets/PSHS_System_Logo.png" type="image/png">
+  <link rel="icon" href="assets/PSHS_System_Logo.png" type="image/png">
   <style>
     body{
       font-family: 'Poppins', sans-serif;
@@ -73,7 +73,7 @@
     <a href="https://maongjeans.github.io/CS3_1stQtrPortfolio_RubidiumLozano/public/Rubidium'29%20Friday%20Sched.html" target="_blank">Friday Schedule</a>
   </div>
 
-    <img src="../assets/images/Brimstone.png" width="1280" height = "270">
+    <img src="assets/brim.jpg" alt="brim" width="1580" height="780">
 
   <footer>
      <p>&copy; Iman Crisostomo - MJ Lozano - Nathan Ogerio - Ysa Rosario | Batch 2029 - Rubidium</p>
