--- a/public/q2/homepage.html
+++ b/public/q2/homepage.html
@@ -70,7 +70,7 @@
     <a href="https://ysaaa2010.github.io/CS3_1stQtrPortfolio/public/q2/q2_graded_1.html" target="_blank">Monday Schedule</a>
 <a href="https://moshiku.github.io/Q2-First-Website/2Q1GRubidiumOGERIO.html.HTML" target="_blank">Tuesday Schedule</a>
     <a href="https://imri720.github.io/CS3_2ndQtrPortfolio_RbCrisostomo/public/Q2_RbSchedule.html" target="_blank">Thursday Schedule</a>
-    <a href="https://maongjeans.github.io/CS3_1stQtrPortfolio_RubidiumLozano/public/Rubidium'29%20Friday%20Sched.html" target="_blank">Friday Schedule</a>
+    <a href="https://maongjeans.github.io/CS3_2ndQtrPortfolio_9RubidiumLozano/public/2Q1GG9RubidiumLozano.html" target="_blank">Friday Schedule</a>
   </div>
 
     <img src="assets/brim.jpg" alt="brim" width="1580" height="780">
