--- a/public/q2/q2_graded_1.html
+++ b/public/q2/q2_graded_1.html
@@ -209,7 +209,7 @@
     <h3> Other Rubidium Schedules</h3>
     <a href="https://moshiku.github.io/Q2-First-Website/2Q1GRubidiumOGERIO.html.HTML" target="_blank">Tuesday Schedule</a>
     <a href="https://imri720.github.io/CS3_2ndQtrPortfolio_RbCrisostomo/public/Q2_RbSchedule.html" target="_blank">Thursday Schedule</a>
-    <a href="https://maongjeans.github.io/CS3_1stQtrPortfolio_RubidiumLozano/public/Rubidium'29%20Friday%20Sched.html" target="_blank">Friday Schedule</a>
+    <a href="https://maongjeans.github.io/CS3_2ndQtrPortfolio_9RubidiumLozano/public/2Q1GG9RubidiumLozano.html" target="_blank">Friday Schedule</a>
     <p>Made by Ysa Rosario | 9 - Rubidium</p>
   </footer>
 </body>
