--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <li><a href ="reflections.md"> Q1 Reflections </a></li>
       <li><a href ="public/q2/q2_bonus1.html"> Q2 bonus</a></li>
       <li><a href ="public/q2/q2_graded_1.html"> Q2_RbSchedule </a></li>
-       <li><a href ="public/q2/Q21NGRbRosario.html"> Q2_NGI 1 </a></li>
+       <li><a href ="public/q2/Q21NGRbRosario.html"> NGI 1</a></li>
+       <li><a href ="public/q2/Q21NGRbRosario.html"> Q2_Graded 2 </a></li>
+
 
 
    
