--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
 <body>
   <section class="w3-container">
-   <h1 style="font-family:Garamond,serif;background-color:beige;";><center>Chronicles of Ysa: Rubidium Edition</center></h1>
-   <nav>
+   <h1 style="font-family:Garamond,serif;background-color:beige;";><center>Ysa's Portfolio</center></h1>
     <ul>
-      <li><a href="./public/Q1_1stGraded.html">Prelude: Ysa .</a> </li>
+      <li><a href="./public/Q1_1stGraded.html"> Ysa 1</a> </li>
       <li><a href="./public/Q12GRubidiumRosario.html"> Second Graded Exercise </a></li> 
       <li><a href="./NGI.html"> 1st Non-Graded Exercise: Volleyball Counter</a></li> 
        <li><a href="./public/Q13GRubidiumRosario.html"> Third Graded Exercise </a></li>
@@ -21,14 +20,16 @@
       <li><a href ="public/NGI_Q1_BONUS/PART5/PART5.html"> Bonus 5 </a></li>
       <li><a href ="public/Q1_6th.html"> Bonus 6 </a></li>
       <li><a href ="reflections.md"> Q1 Reflections </a></li>
-      <li><a href ="public/q2/q2_bonus1.html"> Q2 bonus</a></li>
+      <li><a href ="public/q2/q2_bonus1.html"> Q2 bonus_1</a></li>
       <li><a href ="public/q2/q2_graded_1.html"> Q2_RbSchedule </a></li>
        <li><a href ="public/q2/Q21NGRbRosario.html"> NGI 1</a></li>
        <li><a href ="public/q2/2Q2GRbRosario.html.html"> Q2_Graded 2 </a></li>
+       <li><a href ="public/q2/Q2_bonus2/task 1.html"> Q2 bonus_2: task 1 </a></li>
+  <li><a href ="public/q2/Q2_bonus2/task 2.html"> Q2 bonus_2: task 2 </a></li>
+    <li><a href ="public/q2/Q2_bonus2/task 3.html"> Q2 bonus_2: task 3</a></li>
+      <li><a href ="public/q2/Q2_bonus2/task 4.html"> Q2 bonus_2: task 4 </a></li>
+        <li><a href ="public/q2/Q2_bonus2/task 5.html"> Q2 bonus_2: task 5 </a></li>
 
-
-
-   
    </nav>
   </section>
 </body>
